// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Skeleton > Skeleton animationVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    data-v-bb2beb16=""
  >
    <div
      class="demo-section__desc"
      data-v-bb2beb16=""
    >
      渐变加载效果
    </div>
    <div
      class="demo-section__content"
      data-v-bb2beb16=""
    >
      <div
        class="t-skeleton"
        data-v-bb2beb16=""
      >
        
        
        <div
          class="t-skeleton__row"
        >
          
          <div
            class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-gradient"
          >
            <!---->
          </div>
          
        </div>
        <div
          class="t-skeleton__row"
        >
          
          <div
            class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-gradient"
          >
            <!---->
          </div>
          
        </div>
        <div
          class="t-skeleton__row"
        >
          
          <div
            class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-gradient"
          >
            <!---->
          </div>
          
        </div>
        <div
          class="t-skeleton__row"
        >
          
          <div
            class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-gradient"
            style="width: 55%;"
          >
            <!---->
          </div>
          
        </div>
        
        
      </div>
    </div>
  </div>
  <div
    data-v-bb2beb16=""
  >
    <div
      class="demo-section__desc"
      data-v-bb2beb16=""
    >
      闪烁加载效果
    </div>
    <div
      class="demo-section__content"
      data-v-bb2beb16=""
    >
      <div
        class="t-skeleton"
        data-v-bb2beb16=""
      >
        
        
        <div
          class="t-skeleton__row"
        >
          
          <div
            class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-flashed"
          >
            <!---->
          </div>
          
        </div>
        <div
          class="t-skeleton__row"
        >
          
          <div
            class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-flashed"
          >
            <!---->
          </div>
          
        </div>
        <div
          class="t-skeleton__row"
        >
          
          <div
            class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-flashed"
          >
            <!---->
          </div>
          
        </div>
        <div
          class="t-skeleton__row"
        >
          
          <div
            class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-flashed"
            style="width: 55%;"
          >
            <!---->
          </div>
          
        </div>
        
        
      </div>
    </div>
  </div>
  
</div>
`;

exports[`Skeleton > Skeleton cellGroupVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="group"
    data-v-292616d7=""
  >
    <div
      class="t-skeleton group-avatar"
      data-v-292616d7=""
    >
      
      
      <div
        class="t-skeleton__row"
      >
        
        <div
          class="t-skeleton__col t-skeleton--type-circle t-skeleton--animation-none"
          style="width: 48px; height: 48px;"
        >
          <!---->
        </div>
        
      </div>
      
      
    </div>
    <div
      class="t-skeleton group-content"
      data-v-292616d7=""
    >
      
      
      <div
        class="t-skeleton__row"
      >
        
        <div
          class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
          style="width: 50%;"
        >
          <!---->
        </div>
        
      </div>
      <div
        class="t-skeleton__row"
      >
        
        <div
          class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
          style="width: 100%;"
        >
          <!---->
        </div>
        
      </div>
      
      
    </div>
  </div>
  <div
    class="group"
    data-v-292616d7=""
  >
    <div
      class="t-skeleton group-avatar"
      data-v-292616d7=""
    >
      
      
      <div
        class="t-skeleton__row"
      >
        
        <div
          class="t-skeleton__col t-skeleton--type-rect t-skeleton--animation-none"
          style="width: 48px; height: 48px;"
        >
          <!---->
        </div>
        
      </div>
      
      
    </div>
    <div
      class="t-skeleton group-content"
      data-v-292616d7=""
    >
      
      
      <div
        class="t-skeleton__row"
      >
        
        <div
          class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
          style="width: 50%;"
        >
          <!---->
        </div>
        
      </div>
      <div
        class="t-skeleton__row"
      >
        
        <div
          class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
          style="width: 100%;"
        >
          <!---->
        </div>
        
      </div>
      
      
    </div>
  </div>
  
</div>
`;

exports[`Skeleton > Skeleton gridVue demo works fine 1`] = `
<div
  class="t-skeleton"
>
  
  
  <div
    class="t-skeleton__row"
  >
    
    <div
      class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
      style="width: 48px; height: 48px; border-radius: 6px;"
    >
      <!---->
    </div>
    <div
      class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
      style="width: 48px; height: 48px; border-radius: 6px;"
    >
      <!---->
    </div>
    <div
      class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
      style="width: 48px; height: 48px; border-radius: 6px;"
    >
      <!---->
    </div>
    <div
      class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
      style="width: 48px; height: 48px; border-radius: 6px;"
    >
      <!---->
    </div>
    <div
      class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
      style="width: 48px; height: 48px; border-radius: 6px;"
    >
      <!---->
    </div>
    
  </div>
  <div
    class="t-skeleton__row"
  >
    
    <div
      class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
      style="width: 48px; height: 16px; border-radius: 3px;"
    >
      <!---->
    </div>
    <div
      class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
      style="width: 48px; height: 16px; border-radius: 3px;"
    >
      <!---->
    </div>
    <div
      class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
      style="width: 48px; height: 16px; border-radius: 3px;"
    >
      <!---->
    </div>
    <div
      class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
      style="width: 48px; height: 16px; border-radius: 3px;"
    >
      <!---->
    </div>
    <div
      class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
      style="width: 48px; height: 16px; border-radius: 3px;"
    >
      <!---->
    </div>
    
  </div>
  
  
</div>
`;

exports[`Skeleton > Skeleton imageGroupVue demo works fine 1`] = `
<div
  class="group"
  data-v-ad78cd75=""
>
  <div
    class="t-skeleton"
    data-v-ad78cd75=""
  >
    
    
    <div
      class="t-skeleton__row"
    >
      
      <div
        class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
        style="width: 163.5px; height: 163.5px; border-radius: 12px;"
      >
        <!---->
      </div>
      
    </div>
    <div
      class="t-skeleton__row"
    >
      
      <div
        class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
      >
        <!---->
      </div>
      
    </div>
    <div
      class="t-skeleton__row"
    >
      
      <div
        class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
        style="width: 61%;"
      >
        <!---->
      </div>
      
    </div>
    
    
  </div>
  <div
    class="t-skeleton"
    data-v-ad78cd75=""
  >
    
    
    <div
      class="t-skeleton__row"
    >
      
      <div
        class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
        style="width: 163.5px; height: 163.5px; border-radius: 12px;"
      >
        <!---->
      </div>
      
    </div>
    <div
      class="t-skeleton__row"
    >
      
      <div
        class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
      >
        <!---->
      </div>
      
    </div>
    <div
      class="t-skeleton__row"
    >
      
      <div
        class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
        style="width: 61%;"
      >
        <!---->
      </div>
      
    </div>
    
    
  </div>
</div>
`;

exports[`Skeleton > Skeleton mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-2e493447=""
>
  <h1
    class="title"
    data-v-2e493447=""
  >
    Skeleton 骨架屏
  </h1>
  <p
    class="summary"
    data-v-2e493447=""
  >
    用于等待加载内容所展示的占位图形组合，有动态效果加载效果，减少用户等待焦虑。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-2e493447=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 类型
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      
      <div
        data-v-3d9f6e27=""
      >
        <div
          class="demo-section__desc"
          data-v-3d9f6e27=""
        >
          头像骨架屏
        </div>
        <div
          class="demo-section__content"
          data-v-3d9f6e27=""
        >
          <div
            class="t-skeleton"
            data-v-3d9f6e27=""
          >
            
            
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-circle t-skeleton--animation-none"
                style="width: 48px; height: 48px;"
              >
                <!---->
              </div>
              
            </div>
            
            
          </div>
        </div>
      </div>
      <div
        data-v-3d9f6e27=""
      >
        <div
          class="demo-section__desc"
          data-v-3d9f6e27=""
        >
          图片骨架屏
        </div>
        <div
          class="demo-section__content"
          data-v-3d9f6e27=""
        >
          <div
            class="t-skeleton"
            data-v-3d9f6e27=""
          >
            
            
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-rect t-skeleton--animation-none"
                style="width: 72px; height: 72px;"
              >
                <!---->
              </div>
              
            </div>
            
            
          </div>
        </div>
      </div>
      <div
        data-v-3d9f6e27=""
      >
        <div
          class="demo-section__desc"
          data-v-3d9f6e27=""
        >
          文本骨架屏
        </div>
        <div
          class="demo-section__content"
          data-v-3d9f6e27=""
        >
          <div
            class="t-skeleton"
            data-v-3d9f6e27=""
          >
            
            
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                style="width: 24%; height: 16px; margin-right: 16px;"
              >
                <!---->
              </div>
              <div
                class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                style="width: 76%; height: 16px;"
              >
                <!---->
              </div>
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              >
                <!---->
              </div>
              
            </div>
            
            
          </div>
        </div>
      </div>
      <div
        data-v-3d9f6e27=""
      >
        <div
          class="demo-section__desc"
          data-v-3d9f6e27=""
        >
          段落骨架屏
        </div>
        <div
          class="demo-section__content"
          data-v-3d9f6e27=""
        >
          <div
            class="t-skeleton"
            data-v-3d9f6e27=""
          >
            
            
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              >
                <!---->
              </div>
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              >
                <!---->
              </div>
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              >
                <!---->
              </div>
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                style="width: 55%;"
              >
                <!---->
              </div>
              
            </div>
            
            
          </div>
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-2e493447=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        单元格骨架屏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      
      <div
        class="group"
        data-v-292616d7=""
      >
        <div
          class="t-skeleton group-avatar"
          data-v-292616d7=""
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-circle t-skeleton--animation-none"
              style="width: 48px; height: 48px;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
        <div
          class="t-skeleton group-content"
          data-v-292616d7=""
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 50%;"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 100%;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
      </div>
      <div
        class="group"
        data-v-292616d7=""
      >
        <div
          class="t-skeleton group-avatar"
          data-v-292616d7=""
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-rect t-skeleton--animation-none"
              style="width: 48px; height: 48px;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
        <div
          class="t-skeleton group-content"
          data-v-292616d7=""
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 50%;"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 100%;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-2e493447=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        宫格骨架屏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      <div
        class="t-skeleton"
        data-v-2e493447=""
      >
        
        
        <div
          class="t-skeleton__row"
        >
          
          <div
            class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
            style="width: 48px; height: 48px; border-radius: 6px;"
          >
            <!---->
          </div>
          <div
            class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
            style="width: 48px; height: 48px; border-radius: 6px;"
          >
            <!---->
          </div>
          <div
            class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
            style="width: 48px; height: 48px; border-radius: 6px;"
          >
            <!---->
          </div>
          <div
            class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
            style="width: 48px; height: 48px; border-radius: 6px;"
          >
            <!---->
          </div>
          <div
            class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
            style="width: 48px; height: 48px; border-radius: 6px;"
          >
            <!---->
          </div>
          
        </div>
        <div
          class="t-skeleton__row"
        >
          
          <div
            class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
            style="width: 48px; height: 16px; border-radius: 3px;"
          >
            <!---->
          </div>
          <div
            class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
            style="width: 48px; height: 16px; border-radius: 3px;"
          >
            <!---->
          </div>
          <div
            class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
            style="width: 48px; height: 16px; border-radius: 3px;"
          >
            <!---->
          </div>
          <div
            class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
            style="width: 48px; height: 16px; border-radius: 3px;"
          >
            <!---->
          </div>
          <div
            class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
            style="width: 48px; height: 16px; border-radius: 3px;"
          >
            <!---->
          </div>
          
        </div>
        
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-2e493447=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        图文组合骨架屏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      <div
        class="group"
        data-v-2e493447=""
        data-v-ad78cd75=""
      >
        <div
          class="t-skeleton"
          data-v-ad78cd75=""
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 163.5px; height: 163.5px; border-radius: 12px;"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 61%;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
        <div
          class="t-skeleton"
          data-v-ad78cd75=""
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 163.5px; height: 163.5px; border-radius: 12px;"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 61%;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-2e493447=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件动效
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      
      <div
        data-v-bb2beb16=""
      >
        <div
          class="demo-section__desc"
          data-v-bb2beb16=""
        >
          渐变加载效果
        </div>
        <div
          class="demo-section__content"
          data-v-bb2beb16=""
        >
          <div
            class="t-skeleton"
            data-v-bb2beb16=""
          >
            
            
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-gradient"
              >
                <!---->
              </div>
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-gradient"
              >
                <!---->
              </div>
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-gradient"
              >
                <!---->
              </div>
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-gradient"
                style="width: 55%;"
              >
                <!---->
              </div>
              
            </div>
            
            
          </div>
        </div>
      </div>
      <div
        data-v-bb2beb16=""
      >
        <div
          class="demo-section__desc"
          data-v-bb2beb16=""
        >
          闪烁加载效果
        </div>
        <div
          class="demo-section__content"
          data-v-bb2beb16=""
        >
          <div
            class="t-skeleton"
            data-v-bb2beb16=""
          >
            
            
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-flashed"
              >
                <!---->
              </div>
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-flashed"
              >
                <!---->
              </div>
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-flashed"
              >
                <!---->
              </div>
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-flashed"
                style="width: 55%;"
              >
                <!---->
              </div>
              
            </div>
            
            
          </div>
        </div>
      </div>
      
      
    </div>
  </div>
</div>
`;

exports[`Skeleton > Skeleton themeVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    data-v-3d9f6e27=""
  >
    <div
      class="demo-section__desc"
      data-v-3d9f6e27=""
    >
      头像骨架屏
    </div>
    <div
      class="demo-section__content"
      data-v-3d9f6e27=""
    >
      <div
        class="t-skeleton"
        data-v-3d9f6e27=""
      >
        
        
        <div
          class="t-skeleton__row"
        >
          
          <div
            class="t-skeleton__col t-skeleton--type-circle t-skeleton--animation-none"
            style="width: 48px; height: 48px;"
          >
            <!---->
          </div>
          
        </div>
        
        
      </div>
    </div>
  </div>
  <div
    data-v-3d9f6e27=""
  >
    <div
      class="demo-section__desc"
      data-v-3d9f6e27=""
    >
      图片骨架屏
    </div>
    <div
      class="demo-section__content"
      data-v-3d9f6e27=""
    >
      <div
        class="t-skeleton"
        data-v-3d9f6e27=""
      >
        
        
        <div
          class="t-skeleton__row"
        >
          
          <div
            class="t-skeleton__col t-skeleton--type-rect t-skeleton--animation-none"
            style="width: 72px; height: 72px;"
          >
            <!---->
          </div>
          
        </div>
        
        
      </div>
    </div>
  </div>
  <div
    data-v-3d9f6e27=""
  >
    <div
      class="demo-section__desc"
      data-v-3d9f6e27=""
    >
      文本骨架屏
    </div>
    <div
      class="demo-section__content"
      data-v-3d9f6e27=""
    >
      <div
        class="t-skeleton"
        data-v-3d9f6e27=""
      >
        
        
        <div
          class="t-skeleton__row"
        >
          
          <div
            class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
            style="width: 24%; height: 16px; margin-right: 16px;"
          >
            <!---->
          </div>
          <div
            class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
            style="width: 76%; height: 16px;"
          >
            <!---->
          </div>
          
        </div>
        <div
          class="t-skeleton__row"
        >
          
          <div
            class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
          >
            <!---->
          </div>
          
        </div>
        
        
      </div>
    </div>
  </div>
  <div
    data-v-3d9f6e27=""
  >
    <div
      class="demo-section__desc"
      data-v-3d9f6e27=""
    >
      段落骨架屏
    </div>
    <div
      class="demo-section__content"
      data-v-3d9f6e27=""
    >
      <div
        class="t-skeleton"
        data-v-3d9f6e27=""
      >
        
        
        <div
          class="t-skeleton__row"
        >
          
          <div
            class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
          >
            <!---->
          </div>
          
        </div>
        <div
          class="t-skeleton__row"
        >
          
          <div
            class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
          >
            <!---->
          </div>
          
        </div>
        <div
          class="t-skeleton__row"
        >
          
          <div
            class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
          >
            <!---->
          </div>
          
        </div>
        <div
          class="t-skeleton__row"
        >
          
          <div
            class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
            style="width: 55%;"
          >
            <!---->
          </div>
          
        </div>
        
        
      </div>
    </div>
  </div>
  
</div>
`;
